@@ -57,6 +57,7 @@
 - mannual umount recovery fixes.
 - fix map type info parse error.
 - fix an RPC fd leak.
+- don't block signals we expect to dump core.
 
 4/11/2008 autofs-5.0.4
 -----------------------
